tests/array_literal_failure/error.txt
Validation error: ./tests/array_literal_failure/array_literal_failure.fae, line 8: Expected argument of type `[]mut i32`, got `[]i32`
  8|     func(array)
              ^^^^^

Validation error: ./tests/array_literal_failure/array_literal_failure.fae, line 9: Cannot assign to index of immutable slice
  9|     array[1] = 3
         ^^^^^^^^^^^^

Validation error: ./tests/array_literal_failure/array_literal_failure.fae, line 10: Cannot assign to index of immutable slice
  10|     array[0] = 4
          ^^^^^^^^^^^^

Validation error: ./tests/array_literal_failure/array_literal_failure.fae, line 11: Expected argument of type `[]mut i32`, got `[]i32`
  11|     func(array)
               ^^^^^
